# autocodegen

./: .gitignore  README.md  flake.nix  pyproject.toml
src/autocodegen/: __init__.py  config.py  expand.py  main.py  run.py
src/autocodegen/_internal/: __init__.py  config.py  expand.py  utils.py
